Fixed top bar vertical alignment using flexbox.

--- a/css/theme-2026.css
+++ b/css/theme-2026.css
@@ -1,13 +1,9 @@
 @charset "UTF-8";
 @import url(//fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&family=Inconsolata&display=swap);
 #top-github-link, #body #breadcrumbs {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%); }
+  position: static;
+  top: auto;
+  transform: none; }
 
 .button, .button-secondary {
   display: inline-block;
@@ -876,21 +872,25 @@ td {
   border-radius: 2px;
   margin: 0rem -1rem 2rem;
   padding: 0 1rem;
-  height: 0;
-  min-height: 3rem; }
+  min-height: 3rem;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
 
 #top-github-link {
   position: relative;
   z-index: 1;
-  float: right;
-  display: block; }
+  display: block;
+  order: 2; }
 
 #body #breadcrumbs {
   height: auto;
   display: block;
   margin-bottom: 0;
   padding-left: 0;
-  line-height: 1.4; }
+  line-height: 1.4;
+  order: 1; }
   #body #breadcrumbs span {
     padding: 0 0.1rem; }
 
